--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: mysql:8
     env_file:
-      - project/.env
+      - .env
     command: 
       - --default-authentication-plugin=mysql_native_password
     restart: always
@@ -18,7 +18,7 @@ services:
     build: .
     command: >
       sh -c "
-            cd /code/project
+            cd /code
             sleep 5 &&
             python manage.py migrate && 
              python manage.py runserver 0.0.0.0:8000"
@@ -29,7 +29,7 @@ services:
     depends_on: 
       - db
     env_file:
-      - project/.env
+      - .env
 
 # volumes:
 #   data:
