--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
 
   db:
+    platform: linux/x86_64
     image: mysql:8
     env_file:
       - project/.env
@@ -10,7 +11,7 @@ services:
       - --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - "3306:3306"
+      - "3333:3333"
     # volumes:
     #   - data:/var/lib/mysql
 
