Ajout page erreur 404

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # MYSQL_USER=c0i7j0nfl8gkmaqb
 # MYSQL_PORT=3306
 # MYSQL_HOST=spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
-# DEBUG=False
+# DEBUG_VALUE=False
 # ALLOWED_HOSTS=immotep-ynov.herokuapp.com
 
 # DEVELOPPEMENT
@@ -12,6 +12,8 @@ MYSQL_ROOT_PASSWORD=password
 MYSQL_DATABASE=immotep
 MYSQL_PORT=3306
 MYSQL_HOST=db 
-SECRET_KEY=secret-key
-DEBUG=True
+DEBUG_VALUE=False
 ALLOWED_HOSTS=localhost,*
+
+
+SECRET_KEY=django-insecure-y!8w4-b$#v527&)gtx)qwl3bn+v(k%$w@b!g7x4krfysj^2=bz
