--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 # PRODUCTION
-# MYSQL_DATABASE=jc74fb8s0rcmxidp
-# MYSQL_ROOT_PASSWORD=fe8652nk0b1jvr12
-# MYSQL_USER=c0i7j0nfl8gkmaqb
-# MYSQL_PORT=3306
-# MYSQL_HOST=spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
-# DEBUG_VALUE=False
-# ALLOWED_HOSTS=immotep-ynov.herokuapp.com
+MYSQL_DATABASE=jc74fb8s0rcmxidp
+MYSQL_ROOT_PASSWORD=fe8652nk0b1jvr12
+MYSQL_USER=c0i7j0nfl8gkmaqb
+MYSQL_PORT=3306
+MYSQL_HOST=spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
+DEBUG_VALUE=False
+ALLOWED_HOSTS=immotep-ynov.herokuapp.com
 
 # DEVELOPPEMENT
-MYSQL_ROOT_PASSWORD=password
-MYSQL_DATABASE=immotep
-MYSQL_PORT=3306
-MYSQL_HOST=db 
-DEBUG_VALUE=False
-ALLOWED_HOSTS=localhost,*
+# MYSQL_ROOT_PASSWORD=password
+# MYSQL_DATABASE=immotep
+# MYSQL_PORT=3306
+# MYSQL_HOST=db 
+# DEBUG_VALUE=False
+# ALLOWED_HOSTS=localhost,*
 
 
 SECRET_KEY=django-insecure-y!8w4-b$#v527&)gtx)qwl3bn+v(k%$w@b!g7x4krfysj^2=bz
