--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ MYSQL_HOST=spryrr1myu6oalwl.chr7pe7iynqr.eu-west-1.rds.amazonaws.com
 DEBUG_VALUE=False
 ALLOWED_HOSTS=immotep-ynov.herokuapp.com
 
+CLOUD_NAME=dixl1jzvb
+API_KEY=668846322844895
+API_SECRET=TNr2rta73_S228_mvwpwzvLpDM8
+
 # DEVELOPPEMENT
 # MYSQL_ROOT_PASSWORD=password
 # MYSQL_DATABASE=immotep
