--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ django-crispy-forms==1.14.0
 requests==2.27.1
 gunicorn==20.1.0
 whitenoise==6.0.0
+cloudinary==1.29
+django-cloudinary-storage==0.3.0
